Update TLS Part in Site Config and it's Notes

--- a/nginx/conf.d/google.conf
+++ b/nginx/conf.d/google.conf
@@ -1,26 +1,3 @@
-upstream www.google.com {
-  server 74.125.22.103:443;
-  server 74.125.22.105:443;
-  server 74.125.22.106:443;
-  server 74.125.22.147:443;
-  server 74.125.22.104:443;
-  server 74.125.22.99:443;
-  server 216.58.197.132:443;
-  server 216.58.197.164:443;
-  server 74.125.203.105:443;
-  server 74.125.203.103:443;
-  server 74.125.203.104:443;
-  server 74.125.203.106:443;
-  server 74.125.203.99:443;
-  server 74.125.203.147:443;
-  server 74.125.200.99:443;
-  server 74.125.200.147:443;
-  server 74.125.200.106:443;
-  server 74.125.200.104:443;
-  server 74.125.200.105:443;
-  server 74.125.200.103:443;
-}
-
 server {
     listen 80;
     
@@ -28,11 +5,14 @@ server {
     # listen 443 ssl http2;
     
     # Your domain name here
-    # server_name google-mirror.example.com;
+    # server_name example.com;
     
-    # Your SSL certificate and private key here
-    # ssl_certificate     ssl/fonts.penbeat.cn.crt;
-    # ssl_certificate_key ssl/fonts.penbeat.cn.key;
+    # Your SSL certificate (includes your cert and all intermediate CA cert(s)) and private key here
+    # ssl_certificate     ssl/server.crt;
+    # ssl_certificate_key ssl/server.key;
+    
+    # To enable OCSP stapling, place all the intermediate CA cert(s) and root CA cert here
+    # ssl_trusted_certificate ssl/server.trusted.crt;
     
     location / {
         google on;
