--- a/nginx/conf.d/gstatic-fonts.conf.example
+++ b/nginx/conf.d/gstatic-fonts.conf.example
@@ -1,21 +1,26 @@
 server {
     listen 80;
-    listen 443 ssl;
+    listen 443 ssl http2;
     
-    server_name fonts.penbeat.cn;
+    server_name example.com;
+    # Replace all "example.com" with your domain
 
-    ssl_certificate     ssl/fonts.penbeat.cn.crt;
-    ssl_certificate_key ssl/fonts.penbeat.cn.key;
+    ssl_certificate     ssl/server.crt;
+    ssl_certificate_key ssl/server.key;
+    ssl_trusted_certificate ssl/server.trusted.crt;
+    
+    proxy_pass_header Server;
+    proxy_redirect off;
+    proxy_set_header Accept-Encoding '';
 
     location /css {
-        sub_filter 'fonts.gstatic.com' 'fonts.penbeat.cn';
+        sub_filter 'fonts.gstatic.com' 'example.com';
         sub_filter_once off;
         sub_filter_types text/css;
-        proxy_pass_header Server;
-        proxy_set_header Accept-Encoding '';
-        proxy_redirect off;
+        
         proxy_set_header Host fonts.googleapis.com;
         proxy_pass https://fonts.googleapis.com;
+        
         proxy_cache STATIC;
         proxy_cache_valid  200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
@@ -23,14 +28,13 @@ server {
     }
 
     location /icon {
-        sub_filter 'fonts.gstatic.com' 'fonts.penbeat.cn';
+        sub_filter 'fonts.gstatic.com' 'example.com';
         sub_filter_once off;
         sub_filter_types text/css;
-        proxy_pass_header Server;
-        proxy_set_header Accept-Encoding '';
-        proxy_redirect off;
+        
         proxy_set_header Host fonts.googleapis.com;
         proxy_pass https://fonts.googleapis.com;
+        
         proxy_cache STATIC;
         proxy_cache_valid  200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
@@ -38,18 +42,14 @@ server {
     }
     
     location /avatar/ {
-        proxy_pass_header Server;
         proxy_set_header Host secure.gravatar.com;
-        proxy_set_header Accept-Encoding '';
-        proxy_redirect off;
         proxy_pass https://secure.gravatar.com;
     }
 
     location / {
-        proxy_pass_header Server;
-        proxy_redirect off;
         proxy_set_header Host fonts.gstatic.com;
         proxy_pass https://fonts.gstatic.com;
+        
         proxy_cache STATIC;
         proxy_cache_valid  200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
