Hiding "X-Powered-By" header

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ events {
 
 http {
     server_tokens off;
+    proxy_hide_header X-Powered-By;
     
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
