--- a/nginx/conf.d/as-a-host-router.conf.example
+++ b/nginx/conf.d/as-a-host-router.conf.example
@@ -30,6 +30,6 @@ server {
 #   server_name example.com;
 #
 #   location / {
-#       return 301 https://example.com$request_uri;
+#       return 301 https://$server_name$request_uri;
 #   }
 # }
