--- a/nginx/conf.d/gstatic-fonts.conf.example
+++ b/nginx/conf.d/gstatic-fonts.conf.example
@@ -5,7 +5,7 @@ server {
     server_name example.com;
     # Replace all "example.com" with your domain
 
-    ssl_certificate     ssl/server.crt;
+    ssl_certificate ssl/server.crt;
     ssl_certificate_key ssl/server.key;
     ssl_trusted_certificate ssl/server.trusted.crt;
     
@@ -21,8 +21,8 @@ server {
         proxy_set_header Host fonts.googleapis.com;
         proxy_pass https://fonts.googleapis.com;
         
-        proxy_cache STATIC;
-        proxy_cache_valid  200 304 365d;
+        proxy_cache CACHE;
+        proxy_cache_valid 200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
         expires max;
     }
@@ -35,8 +35,8 @@ server {
         proxy_set_header Host fonts.googleapis.com;
         proxy_pass https://fonts.googleapis.com;
         
-        proxy_cache STATIC;
-        proxy_cache_valid  200 304 365d;
+        proxy_cache CACHE;
+        proxy_cache_valid 200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
         expires max;
     }
@@ -50,8 +50,8 @@ server {
         proxy_set_header Host fonts.gstatic.com;
         proxy_pass https://fonts.gstatic.com;
         
-        proxy_cache STATIC;
-        proxy_cache_valid  200 304 365d;
+        proxy_cache CACHE;
+        proxy_cache_valid 200 304 365d;
         proxy_cache_key $host$uri$is_args$args;
         expires max;
     }
